correct meta data alignment in sxs breakaway

--- a/regserver/regulations/static/regulations/css/less/module/sxs.less
+++ b/regserver/regulations/static/regulations/css/less/module/sxs.less
@@ -98,7 +98,7 @@ SxS content wrapper
     max-width: 1100px;
     min-height: 100%;
     height: 100%;
-    padding: 15px;
+    padding: 30px 15px;
 }
 
 /* 
